# bicho-pr-reviewer

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  codecov.yml  docker-compose.yml  pyproject.toml  railway.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml
docs/: diagrams.md  limitations.md
docs/adr/: 0001-use-architecture-decision-records.md  0002-start-clean-from-template.md  0003-no-database-github-as-source-of-truth.md  0004-single-container-in-process-background-tasks.md  0005-one-hundred-percent-coverage-and-tdd.md  0006-language-agnostic-core-with-adapters.md  0007-model-provider-abstraction-and-function-calling.md  0008-one-review-idempotency-marker-and-stale-head-guard.md  0009-deterministic-scanners-semgrep-and-pip-audit.md  README.md
examples/: insecure_utils.py  inventory.py  orders.py  user_commands.py
okf/: README.md  architecture.md  index.md  limitations.md  overview.md  review-pipeline.md  security-model.md
okf/decisions/: deterministic-scanners.md  full-coverage-tdd.md  index.md  language-agnostic-core.md  model-provider-function-calling.md  multi-provider-llm.md  no-database.md  one-review-idempotency-stale-guard.md  single-container-background-tasks.md  template-reuse.md
okf/operations/: configuration.md  deployment.md  index.md  running-a-review.md
resources/semgrep/python/: security.yml
src/bicho/: __init__.py  main.py
src/bicho/api/: __init__.py  app.py  background.py  container.py  deps.py  security.py
src/bicho/api/routes/: health.py  reviews.py  webhooks.py
src/bicho/application/: __init__.py  context.py  review_service.py  verifier.py
src/bicho/application/analyzers/: __init__.py  base.py  correctness.py  registry.py  schemas.py
src/bicho/application/graph/: __init__.py  builder.py  compose.py  nodes.py  resilience.py  state.py
src/bicho/application/prompts/: __init__.py  registry.py
src/bicho/config/: __init__.py  environment.py  logging.py  readiness.py  settings.py
src/bicho/domain/: __init__.py  errors.py
src/bicho/domain/models/: __init__.py  analysis.py  diff.py  finding.py  marker.py  pull_request.py  review.py
src/bicho/domain/ports/: __init__.py  diff_parser.py  github.py  language_adapter.py  model_provider.py  system.py
src/bicho/domain/services/: __init__.py  dedup.py  diff_mapping.py  fingerprint.py  locations.py  severity_policy.py  verification_policy.py
src/bicho/infrastructure/: __init__.py  clock.py  ids.py
src/bicho/infrastructure/diff/: __init__.py  hunk_parser.py
src/bicho/infrastructure/fs/: __init__.py  pathsafe.py  workspace.py
src/bicho/infrastructure/github/: __init__.py  auth.py  client.py  (+1 more)
tests/: conftest.py
tests/e2e/: test_pip_audit_in_graph.py  test_publish_flow.py  test_review_graph.py  test_review_service.py  test_reviews_endpoint.py  test_semgrep_in_graph.py  test_webhook_flow.py
tests/property/: test_fingerprint_properties.py  test_hunk_parser_properties.py  test_marker_properties.py  test_pathsafe_properties.py
tests/unit/: test_analysis.py  test_analyzer_registry.py  test_background.py  test_clock.py  test_compose.py  test_container.py  test_dedup.py  test_diff_mapping.py  test_diff_models.py  test_environment.py  test_file_contents.py  test_finding.py  test_fingerprint.py  test_github_auth.py  test_github_client.py  test_github_fake.py  test_health.py  test_hunk_parser.py  test_ids.py  test_langchain_provider.py  test_language_adapter.py  test_llm_analyzer.py  test_locations.py  test_logging.py  test_main.py  test_marker.py  test_model_provider.py  test_pathsafe.py  test_pip_audit_output.py  test_pip_audit_scanner.py  test_pull_request.py  test_python_adapter.py  test_readiness.py  test_review_models.py  test_security.py  test_semgrep_output.py  test_semgrep_scanner.py  test_settings.py  test_severity_policy.py  test_subprocess_runner.py  (+4 more)
(+15 files in other folders)
