[project]
name = "bicho-pr-reviewer"
version = "0.0.0"
description = "Automated GitHub Pull Request review agent."
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
authors = [{ name = "Pablo Jacobi" }]
dependencies = [
    "fastapi>=0.139,<0.140",
    "uvicorn[standard]>=0.51,<0.52",
]

[dependency-groups]
dev = [
    "pytest>=9.1,<10",
    "pytest-asyncio>=1.4,<2",
    "pytest-cov>=7.1,<8",
    "httpx>=0.28,<0.29",
    "ruff>=0.15,<0.16",
    "pyright>=1.1.411,<2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bicho"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
# Pragmatic-but-strict rule set. S = flake8-bandit (security); asserts are allowed in tests below.
select = ["E", "F", "I", "UP", "B", "SIM", "C4", "PTH", "ASYNC", "RUF", "S"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"] # assert is the point of a test

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.14"
typeCheckingMode = "strict"
reportMissingTypeStubs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--strict-markers --strict-config --cov=bicho --cov-branch --cov-report=term-missing --cov-fail-under=100"

[tool.coverage.run]
branch = true
source = ["bicho"]

[tool.coverage.report]
show_missing = true
# Standard, non-cheating exclusions. Expanded (with justification) as Protocols/abstracts appear.
exclude_also = [
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
