[project]
name = "bicho-pr-reviewer"
version = "0.0.0"
description = "Automated GitHub Pull Request review agent."
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
authors = [{ name = "Pablo Jacobi" }]
dependencies = [
    "fastapi>=0.139,<0.140",
    "langchain-core>=1.5,<2",
    "langgraph>=1.2,<2",
    "pydantic-settings>=2.14,<3",
    "structlog>=26,<27",
    "uvicorn[standard]>=0.51,<0.52",
]

[dependency-groups]
dev = [
    "pytest>=9.1,<10",
    "pytest-asyncio>=1.4,<2",
    "pytest-cov>=7.1,<8",
    "httpx>=0.28,<0.29",
    "ruff>=0.15,<0.16",
    "pyright>=1.1.411,<2",
    "hypothesis>=6,<7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bicho"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
# Pragmatic-but-strict rule set. S = flake8-bandit (security); asserts are allowed in tests below.
select = ["E", "F", "I", "UP", "B", "SIM", "C4", "PTH", "ASYNC", "RUF", "S"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"] # assert is the point of a test

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.14"
typeCheckingMode = "strict"
reportMissingTypeStubs = false
# The LangGraph review state is populated progressively across nodes: keys are typed NotRequired but
# are guaranteed present by graph ordering when read. This rule is incompatible with that pattern.
reportTypedDictNotRequiredAccess = false

# Pytest fixtures/helpers are invoked by pytest, not referenced in code, so static analysis reports
# them as unused. Relax that single rule for the tests tree only; src stays fully strict.
[[tool.pyright.executionEnvironments]]
root = "tests"
reportUnusedFunction = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--strict-markers --strict-config --cov=bicho --cov-branch --cov-report=term-missing --cov-fail-under=100"

[tool.coverage.run]
branch = true
source = ["bicho"]

[tool.coverage.report]
show_missing = true
# Standard, non-cheating exclusions. Protocol/stub bodies (`...`) are signatures that never execute;
# TYPE_CHECKING blocks and the module __main__ guard never run under tests.
exclude_also = [
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "^\\s*\\.\\.\\.\\s*$",
]
